# aps_text_doc_search

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  default.env  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  setup.cfg
searchapp/: __init__.py  __main__.py
searchapp/repositories/: posts.py
searchapp/resources/: models.py  schemas.py
searchapp/resources/routes/: routes.py
searchapp/static/: docs.json
searchapp/tools/db/: __main__.py  create_db.py  fill_db_initially.py  sql.py
